--- a/src/components/Taskbar/Taskbar.css
+++ b/src/components/Taskbar/Taskbar.css
@@ -1,11 +1,13 @@
 .taskbar-container {
     display: grid;
     /* Use 1fr instead of fixed pixel width to make columns flexible */
+
     grid-template-columns: repeat(16, 1fr);
+    grid-auto-rows: 1fr; /* Ensures consistent row heights */
     align-self: center;
     height: 100%;
     gap: 10px;
-    background-color: rgba(42, 165, 42, 0.205);
+    /*background-color: rgba(42, 165, 42, 0.205);*/
 }
 
 .taskbar-item {
@@ -13,7 +15,7 @@
     justify-self: center;
     align-self: center;
     background-color: white;
-    height: 100%;
+    height: var(--taskbar-height);
     border-radius: 8px;
     font-size: 16px;
     color: black;
