--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -124,6 +124,7 @@
 
 .GridContainer {
     width: var(--fswidth);
-    height: 1650px;
     padding-top: 10px;
+    align-self: center;
+    align-content: center;
 }
