--- a/src/components/Taskbar/Taskbar.css
+++ b/src/components/Taskbar/Taskbar.css
@@ -14,16 +14,28 @@
     display: flex;
     justify-self: center;
     align-self: center;
-    background-color: white;
+
     height: var(--taskbar-height);
     border-radius: 8px;
-    font-size: 16px;
-    color: black;
+
     width: 100%;
     /* Make the width equal to height */
     aspect-ratio: 1;
+    overflow: hidden;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
+.taskbar-item:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 4px 5px rgba(87, 86, 86, 0.2); /* Optional: Adds a shadow effect */
+}
+
+.taskbar-icon {
+    max-width: 100%;
+    height: var(--taskbar-height);
+    object-fit: fill;
+    margin-bottom: 4px;
+}
 /* Default styles already cover large screens. */
 
 /* Styles for screens between 1650px and 1200px */
@@ -35,6 +47,10 @@
     .taskbar-item {
         height: var(--taskbar-height); /* Adjust taskbar height */
     }
+
+    .taskbar-icon {
+        height: var(--taskbar-height); /* Adjust taskbar height */
+    }
 }
 
 /* For devices with a max width of 1200px (e.g., tablets or smaller desktops) */
@@ -43,6 +59,10 @@
         height: var(--taskbar-height-md); /* Adjust taskbar height */
     }
     .taskbar-item {
+        height: var(--taskbar-height-md); /* Adjust taskbar height */
+    }
+
+    .taskbar-icon {
         height: var(--taskbar-height-md); /* Adjust taskbar height */
     }
 }
@@ -56,6 +76,9 @@
     .taskbar-item {
         height: var(--taskbar-height-sm); /* Adjust taskbar height */
     }
+    .taskbar-icon {
+        height: var(--taskbar-height-sm); /* Adjust taskbar height */
+    }
 }
 
 /* For devices with a max width of 480px (e.g., most smartphones) */
@@ -65,6 +88,9 @@
         font-size: 10px; /* Smaller font size */
     }
     .taskbar-item {
+        height: var(--taskbar-height-xs); /* Adjust taskbar height */
+    }
+    .taskbar-icon {
         height: var(--taskbar-height-xs); /* Adjust taskbar height */
     }
 }
