--- a/src/components/Grid/Widgets/Widgets.css
+++ b/src/components/Grid/Widgets/Widgets.css
@@ -43,6 +43,7 @@
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
     overflow: hidden;
     padding-bottom: 0px;
+    border-radius: 15px;
     background-color: rgba(138, 138, 138, 0.05);
 }
 
