--- a/src/components/Grid/Widgets/Widgets.css
+++ b/src/components/Grid/Widgets/Widgets.css
@@ -47,6 +47,16 @@
     background-color: rgba(138, 138, 138, 0.05);
 }
 
+.MusicWidgetContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    padding: 1rem;
+    background-color: rgb(0, 0, 0, 0.15);
+}
+
 .text-card > *:not(:last-child) {
     margin-bottom: 1rem; /* Adjust the margin as needed */
 }
@@ -90,4 +100,71 @@
 
 .text-card.dark .text-card-content {
     color: #e5e7eb;
+}
+
+.cv-widget {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0;
+
+    border-radius: 0.5rem;
+    border: 1px solid #e5e7eb;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    position: relative;
+}
+
+.cv-widget > * {
+    margin: 0; /* Remove margins on child elements */
+    padding: 0; /* Remove paddings on child elements, if needed */
+}
+
+.cv-image-container {
+    position: relative;
+    width: 100%;
+    aspect-ratio: 1 / 1;
+}
+
+.cv-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.cv-overlay {
+    position: absolute;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 0.375rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.cv-overlay p {
+    color: white;
+    font-size: 0.875rem;
+}
+
+.cv-title {
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 0;
+}
+
+/* Dark mode styles */
+.cv-widget.dark {
+}
+
+.cv-widget.dark .cv-title {
+}
+
+/* Hover styles */
+.cv-widget:hover {
+    border-color: #9ca3af;
 }
