--- a/src/components/Grid/Widgets/Widgets.css
+++ b/src/components/Grid/Widgets/Widgets.css
@@ -112,7 +112,7 @@
     gap: 0;
 
     border-radius: 0.5rem;
-    border: 1px solid #e5e7eb;
+    border: 1px solid rgba(0, 0, 0, 0);
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     position: relative;
