--- a/src/components/Grid/Widgets/Widgets.css
+++ b/src/components/Grid/Widgets/Widgets.css
@@ -229,7 +229,7 @@
     color: #555;
     text-transform: capitalize;
 }
-
+/*Testing */
 /* Timezone Widget */
 .timezone-widget {
     display: flex;
