--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -144,7 +144,7 @@
 
 .GridContainer {
     width: 98%;
-    height: 87%;
+    height: 90%;
     padding-top: 10px;
     align-self: center;
     align-content: flex-start;
@@ -187,6 +187,12 @@
     .GridContainer {
         height: 58vh;
     }
+}
+
+.GridContainer-mobile {
+    height: 150vh;
+    overflow-y: auto;
+    padding-bottom: 60px;
 }
 
 @keyframes modalExpand {
