--- a/src/components/Grid/Widgets/Widgets.css
+++ b/src/components/Grid/Widgets/Widgets.css
@@ -55,6 +55,7 @@
     height: 100%;
     padding: 1rem;
     background-color: rgb(0, 0, 0, 0.15);
+    border-radius: 15px;
 }
 
 .text-card > *:not(:last-child) {
@@ -217,18 +218,37 @@
 }
 
 .weather-condition {
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin-top: 4px;
     font-weight: 500;
     text-transform: capitalize;
 }
 
-.weather-description {
-    font-size: 1rem;
-    margin-top: 2px;
-    color: #555;
-    text-transform: capitalize;
+.location-symbol {
+    margin-right: 4px;
+    transform: rotate(45deg); /* To get the correct orientation */
+    display: inline-block;
+    gap: 8px; /* Space between the SVG and text */
+    align-items: center;
 }
+
+.weather-location {
+    display: flex;
+    align-items: center;
+
+    gap: 8px; /* Space between the SVG and text */
+}
+
+.location-symbol {
+    width: 16px; /* Adjust SVG size */
+    height: 16px; /* Adjust SVG size */
+}
+
+.location-text {
+    font-size: 16px; /* Ensure text size matches SVG */
+    line-height: 1; /* Align text with SVG */
+}
+
 /*Testing */
 /* Timezone Widget */
 .timezone-widget {
