--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -214,6 +214,7 @@
 }
 
 .ModalsContainer {
+    background-color: rgba(255, 21, 21, 0.5);
     border-radius: 15px;
     position: fixed;
     top: 50%;
@@ -226,15 +227,7 @@
     transition: width 0.3s ease-out, height 0.3s ease-out; /* Animate both width and height */
 }
 
-.modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
-    animation: fadeIn 0.3s ease-out;
+.Modals-Container {
 }
 
 @keyframes fadeIn {
