--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,6 +10,11 @@
     padding-right: 10px; /* Add spacing from edge */
     align-self: start;
     flex-direction: row; /* Ensures vertical layout */
+    border-radius: 0px 0px 10px 10px;
+}
+
+.header-subcontainer.dark {
+    background-color: rgba(184, 184, 184, 0.24);
 }
 
 .logo-container {
@@ -37,7 +42,11 @@
     gap: 15px;
     font-size: 15px;
     font-weight: 600;
-    color: black;
+    color: var(--primary-text-color);
+}
+
+.timedate-container.dark {
+    color: var(--darkmode-alt-text-color2);
 }
 
 .contact-button {
@@ -59,11 +68,4 @@
     color: black;
     font-weight: 900;
     font-size: 15px;
-}
-
-.header-subcontainer.dark .timedate-container,
-.header-subcontainer.dark .contact-button,
-.header-subcontainer.dark .button-text,
-.header-subcontainer.dark .button-icon {
-    color: white;
 }
