--- a/src/components/Modals/Modal.css
+++ b/src/components/Modals/Modal.css
@@ -84,6 +84,10 @@
     width: 800px;
 }
 
+.modals-content.medium {
+    width: 1000px;
+}
+
 @media (max-width: 1650px) and (min-width: 1201px) {
     .modals-content {
         max-width: 1100px; /* Slightly reduce max width */
