--- a/src/content/EducationCertification/EducationCertificationModal.css
+++ b/src/content/EducationCertification/EducationCertificationModal.css
@@ -127,3 +127,10 @@
 .education-modal-grad.dark {
     color: var(--darkmode-text-color);
 }
+
+.education-location {
+}
+
+.education-location.dark {
+    color: var(--darkmode-text-color);
+}
