Mobile Version ITW

--- a/src/components/SplashScreen/SplashScreen.css
+++ b/src/components/SplashScreen/SplashScreen.css
@@ -40,6 +40,7 @@
     -webkit-video-playsinline: playsinline;
     playsinline: playsinline;
     pointer-events: none; /* Prevents interaction with the video */
+    background-color: red;
 }
 
 .loading-spinner {
