--- a/src/components/Taskbar/Taskbar.css
+++ b/src/components/Taskbar/Taskbar.css
@@ -121,3 +121,21 @@
         font-size: 9px;
     }
 }
+
+.tblaunchpad {
+    background-color: transparent;
+    width: var(--taskbar-height-sm);
+    height: var(--taskbar-height-sm);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 0px;
+    padding: 0;
+}
+
+.launchpad {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    transition: background-color 0.3s ease-in-out; /* Add transition for smooth fade */
+}
